--- a/OpenSourceTI-84/OpenSourceTI-84.vcxproj
+++ b/OpenSourceTI-84/OpenSourceTI-84.vcxproj
@@ -18,6 +18,20 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\combine.cpp" />
+    <ClCompile Include="Source\expression.cpp" />
+    <ClCompile Include="Source\graph.cpp" />
+    <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\terms.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\combine.h" />
+    <ClInclude Include="Source\expression.h" />
+    <ClInclude Include="Source\global.h" />
+    <ClInclude Include="Source\graph.h" />
+    <ClInclude Include="Source\terms.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -141,9 +155,6 @@
       <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\SFML\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
