--- a/OpenSourceTI-84/OpenSourceTI-84.vcxproj.filters
+++ b/OpenSourceTI-84/OpenSourceTI-84.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Source\graph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\constant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\expression.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\constant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
